[gd_scene load_steps=6 format=2]

[ext_resource path="res://LaunchSite.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/Ground-Dirt/Ground_Dirt_006_COLOR.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/Ground-Dirt/Ground_Dirt_006_NORM.jpg" type="Texture" id=3]
[ext_resource path="res://RocketMaterial.tres" type="Material" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )
roughness = 0.85
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )
uv1_scale = Vector3( 10000, 10000, 10000 )

[node name="SceneRoot" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
width = 1e+06
height = 1.0
depth = 1e+06
material = SubResource( 1 )

[node name="GroundCam" type="Camera" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 0.766044, -0.642788, 0, 0.642788, 0.766044, 0, 1, 10 )
fov = 85.9
far = 1e+06

[node name="EarthAlpha" type="CSGCombiner" parent="."]

[node name="NoseCone" type="CSGCylinder" parent="EarthAlpha"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, 0 )
height = 2.0
sides = 50
cone = true
material = ExtResource( 4 )

[node name="Rocket" type="CSGCylinder" parent="EarthAlpha"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
height = 10.0
sides = 50
material = ExtResource( 4 )

[node name="FollowCam" type="Camera" parent="EarthAlpha"]
transform = Transform( 1, 0, 0, 0, -0.173648, 0.984808, 0, -0.984808, -0.173648, 0, 15, -2 )
fov = 80.7
far = 1e+06

[node name="BaseCam" type="Camera" parent="EarthAlpha"]
transform = Transform( 1, 0, 0, 0, 0.173648, -0.984808, 0, 0.984808, 0.173648, 0, 0, 1.25 )
current = true
fov = 85.9
far = 1e+06

[node name="RocketBase" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 51.3928, 0 )
visible = false
radius = 10.0
height = 100.0
sides = 50
material = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
